# AndroidPatch

./: build.gradle  gradle.properties  publish.gradle  settings.gradle
android/: build.gradle
android/src/main/java/android/app/: ActivityThread.java  LoadedApk.java
android/src/main/java/android/content/: Context.java
android/src/main/java/android/content/pm/: IPackageManager.java
android/src/main/java/android/util/: Log.java  Pair.java  SparseArray.java  SparseBooleanArray.java  SparseIntArray.java  SparseLongArray.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/patch/: Loader.java
framework/: build.gradle
framework/src/main/java/utopia/android/patch/lang/: ExternalKernel.java  Patch.java  PatchError.java  PatchLoader.java  Patchwork.java  Sortable.java
framework/src/main/java/utopia/android/patch/lang/extra/: ProcessSelector.java
framework/src/main/java/utopia/android/patch/util/: HiddenAPI.java  MissingAPI.java  ProcessSelector.java  SupplyAPI.java
gradle/wrapper/: gradle-wrapper.properties
killer/: build.gradle
killer/src/main/: AndroidManifest.xml
killer/src/main/cpp/: CMakeLists.txt  dex_killer.cpp  so_killer.cpp
killer/src/main/java/utopia/android/patch/killer/: DebugKiller.java  DexKiller.java  Killer.java  KillerAPI.java  OnSharedObjectLoadedListener.java  SoKiller.java
killer/src/main/res/values/: strings.xml
xposed/: build.gradle  xposed.gradle
xposed/src/main/: AndroidManifest.xml
xposed/src/main/assets/: xposed_init
xposed/src/main/java/utopia/android/patch/xposed/: XposedKernel.java
(+15 files in other folders)
